Офферы, документы и тп

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,3 +1,6 @@
+<app-personal-data-consent></app-personal-data-consent>
+<app-cookies-consent></app-cookies-consent>
+
 <p-menubar [model]="items">
   @if(supabase.currentUser) {
   <ng-template pTemplate="end">
