--- a/frontend/src/app/components/Pages/about/about/about.html
+++ b/frontend/src/app/components/Pages/about/about/about.html
@@ -71,4 +71,10 @@
       </div>
     </div>
   </div>
+  <div class="legal-links legal-links-footer">
+    <a routerLink="/terms-of-service">Пользовательское соглашение</a>
+    <a routerLink="/privacy-policy">Политика конфиденциальности</a>
+    <a routerLink="/public-offer">Публичная оферта</a>
+    <a routerLink="/requisites-page">Реквизиты</a>
+  </div>
 </div>
