исправлена ошибка environment.prod.ts

--- a/frontend/src/app/components/Pages/public-offer/public-offer.component.html
+++ b/frontend/src/app/components/Pages/public-offer/public-offer.component.html
@@ -112,17 +112,9 @@
           
           <div class="contact-block">
             <h3>Контактная информация</h3>
-            <p><strong>Email:</strong> support@rezulution.ru</p>
-            <p><strong>Телефон:</strong> +7 (XXX) XXX-XX-XX</p>
+            <p><strong>Email:</strong> runos.d.hino@gmail.com</p>
+            <p><strong>Телефон:</strong> +7 980-203 65 57</p>
             <p><strong>Сайт:</strong> https://rezulution.ru</p>
-          </div>
-  
-          <div class="requisites">
-            <h4>Реквизиты</h4>
-            <p><strong>Наименование:</strong> Rezulution</p>
-            <p><strong>Юридический адрес:</strong> г. Москва</p>
-            <p><strong>ИНН:</strong> XXXXXXXXXX</p>
-            <p><strong>ОГРН:</strong> XXXXXXXXXXXXX</p>
           </div>
         </section>
       </main>
