исправлены текстовые ошибки и ошибка вебхука

--- a/frontend/src/app/components/Pages/requisites-page/requisites-page.component.html
+++ b/frontend/src/app/components/Pages/requisites-page/requisites-page.component.html
@@ -21,6 +21,11 @@
               <span class="label">ИНН:</span>
               <span class="value inn">560309167631</span>
             </div>
+
+            <div class="detail-item">
+                <span class="label">Телефон:</span>
+                <span class="value inn">+7 (977) 168-77-93</span>
+              </div>
           </div>
           
           <p class="security-notice">
