--- a/frontend/src/app/components/Pages/public-offer/public-offer.component.html
+++ b/frontend/src/app/components/Pages/public-offer/public-offer.component.html
@@ -113,7 +113,7 @@
           <div class="contact-block">
             <h3>Контактная информация</h3>
             <p><strong>Email:</strong> runos.d.hino@gmail.com</p>
-            <p><strong>Телефон:</strong> +7 980-203 65 57</p>
+            <p><strong>Телефон:</strong> +7 (980) 203-65-57</p>
             <p><strong>Сайт:</strong> https://rezulution.ru</p>
           </div>
         </section>
