--- a/frontend/src/app/components/Pages/home/home.component.html
+++ b/frontend/src/app/components/Pages/home/home.component.html
@@ -14,5 +14,9 @@
     <button routerLink="/resume-generation" class="resume-btn">
       {{ 'BUTTON.GENERATE_RESUME' | translate }}
     </button>
+    <button routerLink="/github/analyze" class="github-btn">
+      <i class="pi pi-github"></i>
+      GitHub to Resume
+    </button>
   </div>
 </div>
